# Zipick.ai

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  railway.json  render.yaml
.github/workflows/: ci.yml  deploy.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
frontend/: .env.production  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  utils.ts
k8s/: api.yaml  frontend.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secrets.yaml
scripts/: seed.sql  seed_products.sql
src/: lib.rs  main.rs
src/agents/: comparison_agent.rs  finance_agent.rs  mod.rs  negotiation_agent.rs  orchestrator.rs  price_agent.rs  recommendation_agent.rs  review_agent.rs  search_agent.rs  shipment_agent.rs  supplier_agent.rs
src/ai/: embeddings.rs  llm.rs  mod.rs  rag.rs
src/api/: mod.rs
src/api/middleware/: auth.rs  mod.rs  rate_limit.rs
src/api/routes/: agents.rs  auth.rs  comparison.rs  health.rs  mod.rs  orders.rs  price_alerts.rs  procurement.rs  products.rs  search.rs  suppliers.rs  tracking.rs  users.rs  wishlist.rs
src/core/: config.rs  db.rs  error.rs  types.rs
src/db/repository/: agent_repo.rs  mod.rs  (+4 more)
src/integrations/: alibaba.rs  amazon.rs  daraz.rs  dummyjson.rs  ebay.rs  google_shopping.rs  mod.rs  search_aggregator.rs  walmart.rs
src/models/: agent.rs  mod.rs  order.rs  procurement.rs  product.rs  supplier.rs  user.rs
src/services/: agent_service.rs  mod.rs  price_service.rs  procurement_service.rs  search_service.rs
(+17 files in other folders)
