[package]
name = "zipick"
version = "0.1.0"
edition = "2021"
description = "AI-powered procurement, sourcing, and shopping assistant"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Auth & Security
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }

# AI & LLM
async-openai = "0.23"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"

# Vector search
qdrant-client = "1"

# Caching & Queues
redis = { version = "0.25", features = ["tokio-comp"] }
lapin = "2"

# Background jobs
tokio-cron-scheduler = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }



[dev-dependencies]
axum-test = "15"
mockall = "0.13"
rstest = "0.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
